overflow fix, hope this worked

--- a/public/assets/layouts/_sections.scss
+++ b/public/assets/layouts/_sections.scss
@@ -29,7 +29,7 @@ svg{
         padding: 0 5px;
         display: flex;
         height: 20px;
-        min-width: 500px;
+        min-width: 300px;
         max-width: 1200px;
       }
       
@@ -55,7 +55,7 @@ svg{
         padding: 0 5px;
         display: flex;
         height: 20px;
-        min-width: 500px;
+        min-width: 300px;
         max-width: 1200px;
         overflow-x: hidden !important;
       }
