--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -35,7 +35,7 @@ svg {
   padding: 0 5px;
   display: flex;
   height: 20px;
-  min-width: 500px;
+  min-width: 300px;
   max-width: 1200px;
 }
 .section-2 .progress-value {
@@ -62,8 +62,9 @@ svg {
   padding: 0 5px;
   display: flex;
   height: 20px;
-  min-width: 500px;
+  min-width: 300px;
   max-width: 1200px;
+  overflow-x: hidden !important;
 }
 .section-2 .progress-value-2 {
   animation: load 12s normal forwards;
@@ -96,6 +97,7 @@ img.me {
 
 html {
   overflow: none !important;
+  overflow-x: hidden !important;
 }
 
 body {
